--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Trabajar con asincronismo en JavaScript",
   "main": "src/index.js",
   "scripts": {
-    "callback": "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js",
+    "promise": "node src/promise/index.js"
   },
   "keywords": [
     "callbacks",
@@ -12,5 +14,8 @@
     "async"
   ],
   "author": "Victor Ruiz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
